[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["depth_anything_v2*","metric_depth*"]

[project]
name = "depth-anything-v2"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "gradio_imageslider",
  "gradio",
  "matplotlib",
  "opencv-python",
  "torch",
  "torchvision",
]
version = "1.0.0"

[project.urls]
repository = "https://github.com/topdatascience/Depth-Anything-V2"